--- a/pom.xml
+++ b/pom.xml
@@ -54,14 +54,21 @@
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline-reader</artifactId>
-            <version>3.24.1</version>
+            <version>3.26.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.jline/jline-terminal -->
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline-terminal</artifactId>
-            <version>3.24.1</version>
+            <version>3.26.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jline/jline-jni -->
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-terminal-jni</artifactId>
+            <version>3.26.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.pcollections/pcollections -->
